--- a/godseed-webapp/package.json
+++ b/godseed-webapp/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@atlaskit/pragmatic-drag-and-drop": "^1.2.1",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
