--- a/godseed-webapp/package.json
+++ b/godseed-webapp/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@atlaskit/pragmatic-drag-and-drop": "^1.2.1",
+    "scss": "^0.2.4",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
@@ -22,6 +23,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "prettier": "^3.2.5",
+    "sass": "^1.77.8",
     "vite": "^5.3.1"
   }
 }
