--- a/godseed-webapp/package.json
+++ b/godseed-webapp/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@atlaskit/pragmatic-drag-and-drop": "^1.2.1",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
+    "pinia": "^2.2.0",
     "scss": "^0.2.4",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
