--- a/godseed-backend/package.json
+++ b/godseed-backend/package.json
@@ -17,5 +17,8 @@
     "express": "^4.19.2",
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.7"
   }
 }
